<resources>
    <string name="app_name">MvvmWithHiltExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">enter email</string>
    <string name="password">enter password</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="already"><b>already ? have account</b></string>
    <string name="no_account"><b>Create new account</b></string>
</resources>